cmake_minimum_required(VERSION 3.1)
set (CMAKE_C_STANDARD 11)
set (CMAKE_CXX_STANDARD 11)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
project(MusaEngine)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../Bin)       #设置可执行文件的输出目录
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../Bin)           #设置库文件的输出目录
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/Bin)   
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/../Bin) 
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/../Bin)    
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/../Bin)

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/Runtime")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/Editor")

add_subdirectory(Runtime)
add_subdirectory(Editor)