ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(Common)
ADD_SUBDIRECTORY(Asset)
ADD_SUBDIRECTORY(Platform)
ADD_SUBDIRECTORY(Render)

SET_PROPERTY(TARGET Core PROPERTY FOLDER "Engine")
SET_PROPERTY(TARGET Common PROPERTY FOLDER "Engine")
SET_PROPERTY(TARGET Asset PROPERTY FOLDER "Engine")
SET_PROPERTY(TARGET Platform PROPERTY FOLDER "Engine")
SET_PROPERTY(TARGET Render PROPERTY FOLDER "Engine")