ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(Common)
ADD_SUBDIRECTORY(AssetData)
ADD_SUBDIRECTORY(Platform)
ADD_SUBDIRECTORY(Launch)
ADD_SUBDIRECTORY(Render)

SET_PROPERTY(TARGET Core PROPERTY FOLDER "Runtime")
SET_PROPERTY(TARGET Common PROPERTY FOLDER "Runtime")
SET_PROPERTY(TARGET AssetData PROPERTY FOLDER "Runtime")
SET_PROPERTY(TARGET Platform PROPERTY FOLDER "Runtime")
SET_PROPERTY(TARGET Launch PROPERTY FOLDER "Runtime")
SET_PROPERTY(TARGET Render PROPERTY FOLDER "Runtime")