SET(HEADER_LIST "")
SET(SOURCE_LIST "")

IF(APPLE)
    FILE(GLOB_RECURSE MAC_HEADER_LIST "Mac/*.h")
    FILE(GLOB_RECURSE MAC_SOURCE_LIST "Mac/*.c" "Mac/*.cpp" "Mac/*.m" "Mac/*.mm")
    LIST(APPEND HEADER_LIST ${MAC_HEADER_LIST})
    LIST(APPEND SOURCE_LIST ${MAC_SOURCE_LIST})
ELSEIF(WIN32)
ENDIF()

ASSIGN_SOURCE_GROUP(${HEADER_LIST})
ASSIGN_SOURCE_GROUP(${SOURCE_LIST})

ADD_LIBRARY(EditorApp STATIC ${HEADER_LIST} ${SOURCE_LIST})

IF(APPLE)
    TARGET_LINK_LIBRARIES(EditorApp "-framework Cocoa")
    TARGET_LINK_LIBRARIES(EditorApp "-framework OpenGL")
    TARGET_LINK_LIBRARIES(EditorApp "-framework Metal")
    TARGET_LINK_LIBRARIES(EditorApp "-framework MetalKit")
    SET_TARGET_PROPERTIES(EditorApp PROPERTIES XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC NO)
ELSEIF(WIN32)
ENDIF()
