
IF(APPLE)
    INCLUDE_DIRECTORIES("/opt/local/include")
    FILE(GLOB_RECURSE HEADER_LIST "Mac/*.h")
    FILE(GLOB_RECURSE SOURCE_LIST "Mac/*.c" "Mac/*.cpp" "Mac/*.m" "Mac/*.mm")

    ASSIGN_SOURCE_GROUP(${HEADER_LIST})
    ASSIGN_SOURCE_GROUP(${SOURCE_LIST})

    ADD_EXECUTABLE(MusaEditor MACOSX_BUNDLE ${SOURCE_LIST} ${HEADER_LIST})
    SET_TARGET_PROPERTIES(MusaEditor PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${PROJECT_SOURCE_DIR}/../Resources/Info.plist)
    SET_TARGET_PROPERTIES(MusaEditor PROPERTIES XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC NO)

    TARGET_LINK_LIBRARIES(MusaEditor "-framework Cocoa")
    TARGET_LINK_LIBRARIES(MusaEditor "-framework OpenGL")
    TARGET_LINK_LIBRARIES(MusaEditor "-framework Metal")
    TARGET_LINK_LIBRARIES(MusaEditor "-framework MetalKit")
    TARGET_LINK_LIBRARIES(MusaEditor Core)
    TARGET_LINK_LIBRARIES(MusaEditor Common)
    TARGET_LINK_LIBRARIES(MusaEditor Asset)
    TARGET_LINK_LIBRARIES(MusaEditor Platform)
    TARGET_LINK_LIBRARIES(MusaEditor Launch)
    TARGET_LINK_LIBRARIES(MusaEditor Render)
    
ELSEIF(WIN32)
ENDIF()