FILE(GLOB_RECURSE HEADER_LIST "RHI/*.h")
FILE(GLOB_RECURSE SOURCE_LIST "RHI/*.c" "RHI/*.cpp" "RHI/*.m" "RHI/*.mm")

IF(APPLE)
    FILE(GLOB_RECURSE METAL_HEADER_LIST "MetalRHI/*.h")
    FILE(GLOB_RECURSE METAL_SOURCE_LIST "MetalRHI/*.c" "MetalRHI/*.cpp" "MetalRHI/*.m" "MetalRHI/*.mm")
    LIST(APPEND HEADER_LIST ${METAL_HEADER_LIST})
    LIST(APPEND SOURCE_LIST ${METAL_SOURCE_LIST})

    FILE(GLOB_RECURSE OPENGL_HEADER_LIST "OpenglRHI/*.h")
    FILE(GLOB_RECURSE OPENGL_SOURCE_LIST "OpenglRHI/*.c" "OpenglRHI/*.cpp" "OpenglRHI/*.m" "OpenglRHI/*.mm")
    LIST(APPEND HEADER_LIST ${OPENGL_HEADER_LIST})
    LIST(APPEND SOURCE_LIST ${OPENGL_SOURCE_LIST})
    ADD_DEFINITIONS(
        -DUSE_OPENGL_RENDER
    )
ELSEIF(WIN32)
    
ENDIF()

ASSIGN_SOURCE_GROUP(${HEADER_LIST})
ASSIGN_SOURCE_GROUP(${SOURCE_LIST})

ADD_LIBRARY(Render STATIC
    ${HEADER_LIST}
    ${SOURCE_LIST}
)

IF(APPLE)
    SET_TARGET_PROPERTIES(Render PROPERTIES XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC NO)
ELSEIF(WIN32)
ENDIF()